# Intern-cohort

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TIMEBOX.md  VERIFICATION.md  deploy-hub.sh  mypy.ini  ruff.toml
Devops-eval/: .env.example  (+13 more)
ParallelOps/a3-polyglot/fraud-engine/: Cargo.toml
ParallelOps/a3-polyglot/fraud-engine/src/: lib.rs  main.rs
ParallelOps/a4-modernization/target-repo/: README.md  pyproject.toml
ParallelOps/a4-modernization/target-repo/tests/: test_core.py
ParallelOps/a4-modernization/target-repo/textkit/: __init__.py  core.py
RepoBuilder/: .gitignore  .vercelignore  AGENT-VS-MANUAL.md  Makefile  README.md  install.sh  pyproject.toml  requirements-inventory.txt  setup.cfg  vercel.json
RepoBuilder/agents/: repo-builder.md
RepoBuilder/api/: index.js
RepoBuilder/api/data/RepoBuilder/: dashboard_data.json
RepoBuilder/cli/: __init__.py  analyze.py  clean.py  list_cmd.py  main.py  paths.py  serve.py  state.py
RepoBuilder/core/: __init__.py  api_server.py  dashboard_data_builder.py  fastapi_builder.py  file_scanner.py  graph_engine.py  inventory_agent.py  inventory_ast.py  json_writer.py  node_builder.py  report_generator.py  route_agent.py  route_ast.py  route_dedupe.py  route_scanners.py  rust_builder.py  shell_executor.py  stack_detector.py  test_agent.py  test_discovery.py  test_interpreter.py  workspace_registry.py
RepoBuilder/dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
RepoBuilder/dashboard/scripts/: capture-screenshots.mjs
RepoBuilder/dashboard/src/: App.tsx
RepoBuilder/dashboard/src/api/: client.ts
RepoBuilder/examples/: run_api_server.py  run_dashboard_data_builder.py  run_fastapi_builder.py  run_inventory.py  run_node_builder.py  run_routes.py  run_rust_builder.py  run_tests.py
RepoBuilder/scaffold/: new_project.py
RepoBuilder/scripts/: endpoints.py  inventory.py  prepare-vercel-deploy.sh  repo-intelligence  report.py  tests_detect.py
RepoBuilder/templates/fastapi-service/: README.md  requirements.txt
RepoBuilder/templates/node-api/: README.md  package-lock.json  package.json
RepoBuilder/templates/rust-cli/: Cargo.toml  README.md
RepoBuilder/tests/: test_api_server.py  test_cli.py  test_core_framework.py  test_dashboard_data_builder.py  test_fastapi_builder.py  test_graph_engine.py  test_inventory_agent.py  test_node_builder.py  test_route_agent.py  test_route_dedupe.py  test_rust_builder.py  test_scanners.py  test_test_agent.py  test_workspace_registry.py
(+386 files in other folders)
