[metadata]
name = repo-intelligence
version = 1.0.0

[options]
packages = find:
python_requires = >=3.9
install_requires =
    fastapi>=0.110
    uvicorn>=0.27
    networkx>=3.0

[options.entry_points]
console_scripts =
    repo-intelligence = cli.main:main

[options.extras_require]
dev =
    pytest>=8.0

[options.packages.find]
include = core*, cli*
