[package]
name = "fraud-engine"
version = "0.1.0"
edition = "2021"
description = "Compute a fraud risk score (0-100) for a transaction read as JSON on stdin"

[[bin]]
name = "fraud-engine"
path = "src/main.rs"

[lib]
name = "fraud_engine"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
